Manifests/orchestrator-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: orchestrator
  labels:
    name: orchestrator
