Manifests/service.yaml
# Gateway service
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: orchestrator
spec:
  type: ClusterIP
  selector:
    app: api-gateway
  ports:
  - port: 3000
    targetPort: 3000
    # nodePort: 30000

---

# Inventory service
apiVersion: v1
kind: Service
metadata:
  name: inventory-app
  namespace: orchestrator
spec:
  selector:
    app: inventory-app
  ports:
  - port: 8080
    targetPort: 8080

---
# Inventory Database service
apiVersion: v1
kind: Service
metadata:
  name: inventory-database
  namespace: orchestrator
spec:
  selector:
    app: inventory-database
  ports:
  - port: 5432
    targetPort: 5432

---
# Billing service
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-service
  namespace: orchestrator
spec:
  type: ClusterIP
  selector:
    app: rabbitmq
  ports:
    - name: amqp
      protocol: TCP
      port: 5672
      targetPort: 5672
    - name: management
      protocol: TCP
      port: 15672
      targetPort: 15672


---

apiVersion: v1
kind: Service
metadata:
  name: billing-service
  namespace: orchestrator
spec:
  type: ClusterIP
  selector:
    app: billing-app
  ports:
    - name: billing
      protocol: TCP
      port: 80
      targetPort: 8080

---

apiVersion: v1
kind: Service
metadata:
  name: billing-database-service
  namespace: orchestrator
spec:
  type: ClusterIP
  selector:
    app: billing-database
  ports:
    - name: billing-db
      protocol: TCP
      port: 5432
      targetPort: 5432


---

apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: kube-system
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: traefik
  ports:
  - name: web
    nodePort: 31659
    port: 80
    protocol: TCP
    targetPort: web
  - name: websecure
    nodePort: 30375
    port: 443
    protocol: TCP
    targetPort: websecure
  - name: dashboard
    nodePort: 30000
    port: 8080
    protocol: TCP
    targetPort: 8080

---

apiVersion: v1
kind: Service
metadata:
  name: traefik-dashboard
  namespace: kube-system
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: traefik
  ports:
    - name: dashboard
      port: 8080
      targetPort: 8080
      nodePort: 30003
